--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "helmet": "3.8.1",
     "lodash": "4.17.4",
     "npm": "5.3.0",
+    "pusher-js": "^4.4.0",
     "query-string": "5.0.0",
     "react": "15.6.1",
     "react-dom": "15.6.1",
