--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "react-scripts": "1.0.10",
+    "react-toastify": "^5.1.0",
     "react-truncate": "2.1.5",
     "redux": "3.7.2",
     "redux-socket.io": "1.4.0",
