--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "concurrently": "3.5.0",
     "cross-env": "5.0.1",
     "debug": "2.6.8",
-    "express": "4.15.3",
+    "express": "^4.15.3",
+    "express-favicon": "^2.0.1",
     "font-awesome": "4.7.0",
     "helmet": "3.8.1",
     "lodash": "4.17.4",
     "npm": "5.3.0",
+    "path": "^0.12.7",
     "pusher-js": "^4.4.0",
     "query-string": "5.0.0",
     "react": "15.6.1",
