--- a/package.json
+++ b/package.json
@@ -19,13 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-  },
-  "proxy": {
-    "/socket.io": {
-      "target": "ws://localhost:3001",
-      "ws": true
-    }
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "classnames": "2.2.5",
