--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "redux-thunk": "2.2.0",
     "seamless-immutable": "7.1.2",
     "socket.io": "2.0.3",
-    "socket.io-client": "2.0.3"
+    "socket.io-client": "2.0.3",
+    "http-proxy-middleware": "^0.19.1"
   },
   "devDependencies": {
     "nodemon": "1.11.0",
